--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,16 +1,24 @@
 {
   "dependencies": {
-    "com.unity.collab-proxy": "1.3.9",
-    "com.unity.dots.editor": "0.12.0-preview.6",
-    "com.unity.entities": "0.17.0-preview.42",
+    "com.unity.burst": "1.6.5",
+    "com.unity.collab-proxy": "1.15.15",
+    "com.unity.entities": "0.50.0-preview.24",
     "com.unity.ide.visualstudio": "2.0.15",
-    "com.unity.ide.vscode": "1.2.3",
-    "com.unity.memoryprofiler": "0.4.3-preview.1",
-    "com.unity.physics": "0.6.0-preview.3",
-    "com.unity.rendering.hybrid": "0.11.0-preview.44",
-    "com.unity.test-framework": "1.1.30",
-    "com.unity.textmeshpro": "3.0.1",
-    "com.unity.timeline": "1.4.6",
+    "com.unity.mathematics": "1.2.6",
+    "com.unity.memoryprofiler": "0.6.0-preview.1",
+    "com.unity.nuget.mono-cecil": "1.10.2",
+    "com.unity.nuget.newtonsoft-json": "3.0.2",
+    "com.unity.physics": "0.50.0-preview.24",
+    "com.unity.profiling.core": "1.0.2",
+    "com.unity.properties": "1.7.5-preview",
+    "com.unity.properties.ui": "1.7.5-preview",
+    "com.unity.rendering.hybrid": "0.50.0-preview.24",
+    "com.unity.roslyn": "0.2.2-preview",
+    "com.unity.scriptablebuildpipeline": "1.19.6",
+    "com.unity.test-framework": "1.1.31",
+    "com.unity.test-framework.performance": "2.8.0-preview",
+    "com.unity.textmeshpro": "3.0.6",
+    "com.unity.timeline": "1.4.8",
     "com.unity.ugui": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
