--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -12,6 +12,7 @@
     "com.unity.profiling.core": "1.0.2",
     "com.unity.properties": "1.7.5-preview",
     "com.unity.properties.ui": "1.7.5-preview",
+    "com.unity.render-pipelines.universal": "10.8.1",
     "com.unity.rendering.hybrid": "0.50.0-preview.24",
     "com.unity.roslyn": "0.2.2-preview",
     "com.unity.scriptablebuildpipeline": "1.19.6",
